diesel_compile_tests/tests/fail/sqlite_insert_or_ignore_cannot_be_used_on_pg.stderr
error[E0277]: the trait bound `diesel::query_builder::insert_statement::private::InsertOrIgnore: QueryFragment<Pg>` is not satisfied
  --> tests/fail/sqlite_insert_or_ignore_cannot_be_used_on_pg.rs:21:10
   |
21 |         .execute(&mut connection)
   |          ^^^^^^^ the trait `QueryFragment<Pg>` is not implemented for `diesel::query_builder::insert_statement::private::InsertOrIgnore`
   |
   = help: the following implementations were found:
             <diesel::query_builder::insert_statement::private::InsertOrIgnore as QueryFragment<Mysql>>
             <diesel::query_builder::insert_statement::private::InsertOrIgnore as QueryFragment<Sqlite>>
   = note: required because of the requirements on the impl of `QueryFragment<Pg>` for `InsertStatement<users::table, diesel::query_builder::insert_statement::ValuesClause<ColumnInsertValue<columns::id, diesel::internal::derives::as_expression::Bound<diesel::sql_types::Integer, i32>>, users::table>, diesel::query_builder::insert_statement::private::InsertOrIgnore>`
   = note: required because of the requirements on the impl of `ExecuteDsl<diesel::PgConnection, Pg>` for `InsertStatement<users::table, diesel::query_builder::insert_statement::ValuesClause<ColumnInsertValue<columns::id, diesel::internal::derives::as_expression::Bound<diesel::sql_types::Integer, i32>>, users::table>, diesel::query_builder::insert_statement::private::InsertOrIgnore>`
